--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<header class='page-header'>
-    <h4>The Mood Shop</h4>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Cart</a></li>
-      </ul>
-    </nav>
-  </header>
+<header class="page-header">
+  <link rel="stylesheet" href="./resources/css/styles.css" />
+  <h4>The Mood Shop</h4>
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Cart</a></li>
+    </ul>
+  </nav>
+</header>
