--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<html>
+<body>
+    <main class='items' id='items'>
+        <!--
+          Display moods here
+         -->
+    </main>
 <header class="page-header">
   <link rel="stylesheet" href="./resources/css/styles.css" />
   <h4>The Mood Shop</h4>
@@ -9,3 +16,18 @@
     </ul>
   </nav>
 </header>
+<div>
+    <img src=’/resource...’ width=300 height=300>
+  </div>
+
+  <div>
+    <img src=’/resource...’ width=300 height=300>
+    <p>description of mood</p>
+    <p>5.99</p>
+  </div>
+  
+</body>
+
+
+<script src='./resources/js/scripts.js' type="module">
+</script>
